--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>Path Finding Algorithms</h1>
   <ul>
     <li><a href="breadth-first-search.html">Breadth First Search</a></li>
-    <li><a href="#">TODO: Dijkstra's Algorithm</a></li>
+    <li><a href="dijkstras.html">Dijkstra's Algorithm</a></li>
     <li><a href="#">TODO: A* Algorithm</a></li>
   </ul>
 </body>
